# spinspg

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  deploy.yml  pyproject.toml  setup.py
.github/workflows/: deploy.yml  testing.yml
docs/: api.md  changelog.md  conf.py  development.md  index.md
docs/api/: api.md
docs/note/: appx_group_product.tex  appx_point_group.tex  appx_procrustes.tex  appx_spin_point_group_table.tex  glossary.tex  latexmkrc  main.tex  reference.bib  sec_group.tex  sec_identification.tex  sec_operation.tex  sec_search.tex
examples/: symmetry_search.py
scripts/: generate_automorphisms.py  generate_spin_point_group_table.py
src/spinspg/: __init__.py  automorphisms.json  core.py  group.py  permutation.py  pointgroup.py  spin.py  spin_only.py  utils.py
tests/: conftest.py  test_group.py  test_permutation.py  test_pointgroup.py  test_spin.py  test_spin_only.py
