[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

###############################################################################
# Project
###############################################################################
[project]
name = "spinspg"
dynamic = ["version"]
readme = "README.md"
description = "Python package for detecting spin space group on top of spglib"
authors = [
    {name = "Kohei Shinohara", email = "kshinohara0508@gmail.com"},
]
requires-python = ">=3.8.0"
license = {file = "LICENSE"}
classifiers = [
    # Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "setuptools",
    "setuptools_scm",
    "wheel",
    "typing_extensions",
    "numpy>=1.20.1",
    "spglib>=2.0.2",
    "hsnf==0.3.15",  # Hermite normal form
    "spgrep>=0.3.2",
]

[project.urls]
homepage = "https://github.com/spglib/spinspg"
repository = "https://github.com/spglib/spinspg"

[project.optional-dependencies]
dev = [
    "spgrep-modulation>=0.2.5",
    "pytest==7.2.0",
    "pre-commit",
    "black",
    "mypy",
    "toml",
]
docs = [
    "importlib-metadata",
    "sphinx",
    "sphinx-autobuild",
    "myst-parser",
    "sphinx-book-theme",
    "linkify-it-py",
    "enum-tools[sphinx]",
]

###############################################################################
# Setuptools
###############################################################################

[tool.setuptools]
zip-safe = false

# packages = find
# package-dir = {"" = "src"}
#
# [tool.setuptools.packages.find]
# where = ["src"]
# include = ["spinspg"]

###############################################################################
# Other tools
###############################################################################

# Enable version inference
[tool.setuptools_scm]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src", "tests", "exp"]
line-length = 99
ignore = [
    "E501",
    "W605",
]
exclude = [
    'docs',
]

[tool.black]
line-length = 99
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs
)/
'''

[tool.mypy]
exclude = [
  'docs',
]
warn_no_return = false
